--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         width: 35em;
         margin: 0 auto;
         font-family: Tahoma, Verdana, Arial, sans-serif;
-        background-color: rgb(66,133,244);
+        background-color: rgb(15,157,88);
     }
 </style>
 </head>
 <body>
-<h1>Welcome to your website!</h1>
-<p>If you see this page, your voice command has successfully deployed your Docker container to Kubernetes.</p>
+<h1>Welcome to your website! This is version 2</h1>
+<p>If you see this page, your voice command has successfully deployed your new Docker container to Kubernetes.</p>
 
 <img src="https://www.eweek.com/imagesvr_ez/b2bezp/2018/07/1088GoogleCloud.jpg?alias=article_hero"></img>
 
